Leaderboard swagger
